[gd_scene load_steps=12 format=3 uid="uid://bvvdup0h1ve1x"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_mu3k7"]
[ext_resource type="Script" path="res://scripts/player/PlayerInputSync.gd" id="2_8tprx"]
[ext_resource type="Script" path="res://scripts/player/HealthBar.gd" id="3_pcrv8"]
[ext_resource type="Texture2D" uid="uid://cryqtawckchvl" path="res://assets/img/characters/hand/green_hand.png" id="5_qi38w"]
[ext_resource type="PackedScene" uid="uid://ctu23fjlh6aba" path="res://scenes/items/melee/one_handed/dagger.tscn" id="5_v24ul"]
[ext_resource type="Texture2D" uid="uid://bucdkpjd3xsqv" path="res://assets/img/characters/body/green_body.png" id="6_ii706"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_h27al"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:player")
properties/1/spawn = true
properties/1/replication_mode = 0
properties/2/path = NodePath(".:velocity")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:rotation")
properties/3/spawn = true
properties/3/replication_mode = 2
properties/4/path = NodePath(".:player_color")
properties/4/spawn = true
properties/4/replication_mode = 0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_gx3ml"]
properties/0/path = NodePath(".:direction")
properties/0/spawn = false
properties/0/replication_mode = 2
properties/1/path = NodePath(".:mouse_pos")
properties/1/spawn = false
properties/1/replication_mode = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_nysvx"]
radius = 41.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2b61q"]
bg_color = Color(0, 0.721569, 0.317647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="CircleShape2D" id="CircleShape2D_ft1mi"]
radius = 21.0

[node name="Player" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
motion_mode = 1
script = ExtResource("1_mu3k7")

[node name="ServerSync" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_h27al")

[node name="PlayerInputSync" type="MultiplayerSynchronizer" parent="." node_paths=PackedStringArray("player")]
root_path = NodePath(".")
replication_config = SubResource("SceneReplicationConfig_gx3ml")
script = ExtResource("2_8tprx")
player = NodePath("..")

[node name="WeaponPickupArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponPickupArea"]
shape = SubResource("CircleShape2D_nysvx")

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 23.0
offset_right = 20.0
offset_bottom = 33.0
grow_horizontal = 2
size_flags_vertical = 8
theme_override_styles/fill = SubResource("StyleBoxFlat_2b61q")
step = 1.0
show_percentage = false
script = ExtResource("3_pcrv8")

[node name="Sprites" type="Node2D" parent="."]

[node name="LeftHandSprite" type="Sprite2D" parent="Sprites"]
texture = ExtResource("5_qi38w")
offset = Vector2(27, -15)

[node name="Dagger" parent="Sprites/LeftHandSprite" instance=ExtResource("5_v24ul")]
position = Vector2(27, -15)

[node name="RightHandSprite" type="Sprite2D" parent="Sprites"]
texture = ExtResource("5_qi38w")
offset = Vector2(27, 15)

[node name="BodySprite" type="Sprite2D" parent="Sprites"]
texture = ExtResource("6_ii706")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ft1mi")
